Release v2.1.2-b3: Beta consolidation, Fabric access widener fix, and Updater log cleanup
- Bumped version to 2.1.2-b3 in gradle.properties and built artifacts
- Consolidated changelogs for the first public 1.21.1 beta (CHANGELOG_v2.1.2_mc_1.21.1.md)
- Fixed Fabric IllegalAccessError on MineStacksScreen by properly declaring the access widener in fabric.mod.json
- Fixed updater logs persisting indefinitely in the mods folder by introducing a conditional cleanup routine in UpdateManager.java (triggered only on successful updates)
- Added new self-reflection lessons to GEMINI.md and CLAUDE.md regarding runtime access widener requirements and updater architecture